--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,6 +4,8 @@
 body {
     background-color: black;
     .wrapper {
+        opacity: 0;
+        transition: all 1s ease 0s;
         .container {
             .parralax {
                 position: relative;
@@ -38,11 +40,15 @@ body {
                         }
                     }
                     .light-1 {
+                        bottom: -100%;
+                        transition: all 2s ease 2s;
+
                         position: absolute;
-                        @include adaptiveBottom(120, 0);
-                        left: 20%;
+                        @include adaptiveLeft(450, 15);
+
                         border-radius: 50%;
-                        // box-shadow: 0 0 150px 100px rgb(255, 0, 221);
+                        width: 1px;
+                        height: 1px;
                         @include adaptiveBoxShadow(0, 0, 150, 100, 0, 0, 50, 40, rgb(255, 0, 221));
 
                         animation-name: light-1-anim;
@@ -63,13 +69,18 @@ body {
                             }
                         }
                     }
-                    .light-2 {
-                        position: absolute;
-                        @include adaptiveBottom(120, 0);
+                    .light-1.active {
+                        @include adaptiveBottom(120, 80);
+                    }
 
+                    .light-2 {
+                        bottom: -100%;
+                        transition: all 2s ease 1.8s;
+                        position: absolute;
                         left: 50%;
                         border-radius: 50%;
-                        // box-shadow: 0 0 150px 100px rgb(89, 0, 255);
+                        width: 1px;
+                        height: 1px;
                         @include adaptiveBoxShadow(0, 0, 150, 100, 0, 0, 50, 40, rgb(89, 0, 255));
 
                         animation-name: light-2-anim;
@@ -90,13 +101,18 @@ body {
                             }
                         }
                     }
-                    .light-3 {
-                        position: absolute;
-                        @include adaptiveBottom(120, 0);
-                        left: 80%;
-                        border-radius: 50%;
-                        // box-shadow: 0 0 150px 100px rgb(255, 187, 0);
+                    .light-2.active {
+                        @include adaptiveBottom(120, 80);
+                    }
 
+                    .light-3 {
+                        bottom: -100%;
+                        transition: all 2s ease 2s;
+                        position: absolute;
+                        @include adaptiveLeft(1500, 320);
+                        border-radius: 50%;
+                        width: 1px;
+                        height: 1px;
                         @include adaptiveBoxShadow(0, 0, 150, 100, 0, 0, 50, 40, rgb(255, 187, 0));
 
                         animation-name: light-3-anim;
@@ -116,6 +132,9 @@ body {
                                 opacity: 1;
                             }
                         }
+                    }
+                    .light-3.active {
+                        @include adaptiveBottom(120, 80);
                     }
                 }
 
@@ -139,12 +158,16 @@ body {
                         }
                     }
                     .rope {
+                        top: -100%;
+                        transition: all 1s ease 1s;
                         position: absolute;
-                        @include adaptiveTop(0, 80);
                         @include adaptiveHeight(1080, 300);
                         @include adaptiveLeft(-327, -45);
                         @include adaptiveWidth(2574, 400);
                         background: url("../img/rope.png") top center / 100% 30% no-repeat;
+                    }
+                    .rope.active {
+                        @include adaptiveTop(0, 80);
                     }
                     .birds {
                         position: absolute;
@@ -256,12 +279,16 @@ body {
                         }
                     }
                     .rope {
+                        top: -100%;
+                        transition: all 1s ease 1.3s;
                         position: absolute;
-                        @include adaptiveTop(-86, 40);
                         @include adaptiveHeight(1080, 300);
                         @include adaptiveLeft(-327, -45);
                         @include adaptiveWidth(2574, 400);
                         background: url("../img/rope.png") top center / 100% 30% no-repeat;
+                    }
+                    .rope.active {
+                        @include adaptiveTop(-86, 40);
                     }
 
                     .cloud-1 {
@@ -352,15 +379,16 @@ body {
                     }
 
                     .rope {
-                        // display: none;
-
+                        top: -100%;
+                        transition: all 1s ease 1.6s;
                         position: absolute;
-                        @include adaptiveTop(-162, 0);
-
                         @include adaptiveHeight(1080, 300);
                         @include adaptiveLeft(-327, -45);
                         @include adaptiveWidth(2574, 400);
                         background: url("../img/rope.png") top center / 100% 30% no-repeat;
+                    }
+                    .rope.active {
+                        @include adaptiveTop(-162, 0);
                     }
                     .birds {
                         position: absolute;
@@ -478,10 +506,11 @@ body {
                     width: 100%;
                     height: 100%;
                     .img {
+                        bottom: -100%;
+                        transition: all 1s ease 0.1s;
                         position: absolute;
                         @include adaptiveLeft(-288, -203);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(130, 80);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-plain.png") center bottom / 10% 10% repeat-x;
 
@@ -506,16 +535,20 @@ body {
                             background-color: black;
                         }
                     }
+                    .img.active {
+                        @include adaptiveBottom(130, 80);
+                    }
                 }
 
                 &__wave-2 {
                     width: 100%;
                     height: 100%;
                     .img {
+                        bottom: -100%;
+                        transition: all 1.1s ease 0.2s;
                         position: absolute;
                         @include adaptiveLeft(-288, -194);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(105, 67);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-paint.png") center bottom / 12% 12% repeat-x;
 
@@ -540,16 +573,20 @@ body {
                             background-color: black;
                         }
                     }
+                    .img.active {
+                        @include adaptiveBottom(105, 67);
+                    }
                 }
 
                 &__wave-3 {
                     width: 100%;
                     height: 100%;
                     .img {
+                        bottom: -100%;
+                        transition: all 1.2s ease 0.3s;
                         position: absolute;
                         @include adaptiveLeft(-288, -183);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(65, 50);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-plain.png") center bottom / 15% 15% repeat-x;
 
@@ -574,61 +611,8 @@ body {
                             background-color: black;
                         }
                     }
-                }
-
-                &__liighthouse {
-                    width: 100%;
-                    height: 100%;
-                    .img {
-                        position: absolute;
-                        @include adaptiveBottom(45, 45);
-                        @include adaptiveLeft(1500, 220);
-                        @include adaptiveWidth(260, 70);
-                        @include adaptiveHeight(500, 130);
-                        background: url("../img/lighthouse.png") center bottom / 100% 100% no-repeat;
-
-                        animation-name: liighthouse-anim;
-                        animation-duration: 8s;
-                        animation-iteration-count: infinite;
-                        animation-timing-function: linear;
-
-                        @keyframes liighthouse-anim {
-                            0% {
-                                transform: rotateZ(-10deg) rotateX(0deg) translate3d(-10%, 5%, 0);
-                            }
-                            50% {
-                                transform: rotateZ(10deg) rotateX(0deg) translate3d(10%, -10%, 0);
-                            }
-                            100% {
-                                transform: rotateZ(-10deg) rotateX(0deg) translate3d(-10%, 5%, 0);
-                            }
-                        }
-
-                        .light {
-                            display: inline;
-                            position: absolute;
-                            top: 25%;
-                            left: 50%;
-                            @include adaptiveBoxShadow(0, 0, 150, 100, 0, 0, 150, 60, rgba(255, 0, 221, 0.637));
-
-                            animation-name: light-anim;
-                            animation-duration: 6s;
-                            animation-iteration-count: infinite;
-                            @keyframes light-anim {
-                                0% {
-                                    transform: scale(1);
-                                    opacity: 0.4;
-                                }
-                                50% {
-                                    transform: scale(0.1);
-                                    opacity: 0.1;
-                                }
-                                100% {
-                                    transform: scale(1);
-                                    opacity: 0.4;
-                                }
-                            }
-                        }
+                    .img.active {
+                        @include adaptiveBottom(65, 50);
                     }
                 }
 
@@ -636,10 +620,12 @@ body {
                     width: 100%;
                     height: 100%;
                     .img {
+                        bottom: -100%;
+                        transition: all 1.3s ease 0.4s;
+
                         position: absolute;
                         @include adaptiveLeft(-288, -169);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(23, 33);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-paint.png") center bottom / 18% 18% repeat-x;
 
@@ -664,16 +650,21 @@ body {
                             background-color: black;
                         }
                     }
+                    .img.active {
+                        @include adaptiveBottom(23, 33);
+                    }
                 }
 
                 &__wave-5 {
                     width: 100%;
                     height: 100%;
                     .img {
+                        bottom: -100%;
+                        transition: all 1.4s ease 0.5s;
+
                         position: absolute;
                         @include adaptiveLeft(-288, -153);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(-32, 10);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-plain.png") center bottom / 22% 22% repeat-x;
 
@@ -698,6 +689,9 @@ body {
                             background-color: black;
                         }
                     }
+                    .img.active {
+                        @include adaptiveBottom(-32, 10);
+                    }
                 }
 
                 &__wave-6 {
@@ -705,10 +699,12 @@ body {
                     height: 100%;
 
                     .img {
+                        bottom: -100%;
+                        transition: all 1.5s ease 0.6s;
+
                         position: absolute;
                         @include adaptiveLeft(-288, -140);
                         @include adaptiveWidth(2496, 800);
-                        @include adaptiveBottom(-76, -10);
                         @include adaptiveHeight(1080, 400);
 
                         background: url("../img/waves/wave-paint.png") center bottom / 25% 25% repeat-x;
@@ -726,8 +722,72 @@ body {
                             }
                         }
                     }
+                    .img.active {
+                        @include adaptiveBottom(-76, -10);
+                    }
+                }
+
+                &__liighthouse {
+                    width: 100%;
+                    height: 100%;
+
+                    .img {
+                        position: absolute;
+                        bottom: -100%;
+                        transition: all 1s ease 2s;
+                        @include adaptiveLeft(1500, 220);
+                        @include adaptiveWidth(260, 70);
+                        @include adaptiveHeight(500, 130);
+                        background: url("../img/lighthouse.png") center bottom / 100% 100% no-repeat;
+                        animation-name: liighthouse-anim;
+                        animation-duration: 8s;
+                        animation-iteration-count: infinite;
+                        animation-timing-function: linear;
+                        @keyframes liighthouse-anim {
+                            0% {
+                                transform: rotateZ(-10deg) rotateX(0deg) translate3d(-10%, 5%, 0);
+                            }
+                            50% {
+                                transform: rotateZ(10deg) rotateX(0deg) translate3d(10%, -10%, 0);
+                            }
+                            100% {
+                                transform: rotateZ(-10deg) rotateX(0deg) translate3d(-10%, 5%, 0);
+                            }
+                        }
+
+                        .light {
+                            display: inline;
+                            position: absolute;
+                            top: 25%;
+                            left: 50%;
+                            @include adaptiveBoxShadow(0, 0, 150, 100, 0, 0, 150, 60, rgba(255, 0, 221, 0.637));
+                            animation-name: light-anim;
+                            animation-duration: 6s;
+                            animation-iteration-count: infinite;
+                            @keyframes light-anim {
+                                0% {
+                                    transform: scale(1);
+                                    opacity: 0.4;
+                                }
+                                50% {
+                                    transform: scale(0.1);
+                                    opacity: 0.1;
+                                }
+                                100% {
+                                    transform: scale(1);
+                                    opacity: 0.4;
+                                }
+                            }
+                        }
+                    }
+                    .img.active {
+                        @include adaptiveBottom(45, 45);
+                    }
                 }
             }
         }
+    }
+    .wrapper.active {
+        opacity: 1;
     }
 }
