--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ body .wrapper .container .parralax__bg .light-1.active {
 }
 body .wrapper .container .parralax__bg .light-2 {
 		bottom: -100%;
-		transition: all 2s ease 1.8s;
+		transition: all 2s ease 2s;
 		position: absolute;
 		left: 50%;
 		border-radius: 50%;
@@ -213,32 +213,20 @@ body .wrapper .container .parralax__bg .light-3.active {
 body .wrapper .container .parralax__rope-1 {
 		width: 100%;
 		height: 100%;
-		animation-duration: 50s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-1-anim {
-		0% {
-				transform: translate(-5%, 0);
-		}
-		50% {
-				transform: translate(5%, 0);
-		}
-		100% {
-				transform: translate(-5%, 0);
-		}
+		position: relative;
 }
 body .wrapper .container .parralax__rope-1 .rope {
-		top: -100%;
+		transform: translateY(-50%);
 		transition: all 1s ease 1s;
 		position: absolute;
+		top: calc( (((-80) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
 		height: calc( (((780) * ((100vw - 320px) * 100) / (1600)) / 100) + 300px );
 		left: calc( (((-282) * ((100vw - 320px) * 100) / (1600)) / 100) + -45px );
 		width: calc( (((2174) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/rope.png") top center/100% 30% no-repeat;
 }
 body .wrapper .container .parralax__rope-1 .rope.active {
-		top: calc( (((-80) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
+		transform: translateY(0);
 }
 body .wrapper .container .parralax__rope-1 .birds {
 		position: absolute;
@@ -327,32 +315,19 @@ body .wrapper .container .parralax__rope-1 .cloud-3 {
 body .wrapper .container .parralax__rope-2 {
 		width: 100%;
 		height: 100%;
-		animation-duration: 60s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-2-rope-anim {
-		0% {
-				transform: translate(5%, 0);
-		}
-		50% {
-				transform: translate(-5%, 0);
-		}
-		100% {
-				transform: translate(5%, 0);
-		}
 }
 body .wrapper .container .parralax__rope-2 .rope {
-		top: -100%;
+		transform: translateY(-50%);
 		transition: all 1s ease 1.3s;
 		position: absolute;
+		top: calc( (((-126) * ((100vw - 320px) * 100) / (1600)) / 100) + 40px );
 		height: calc( (((780) * ((100vw - 320px) * 100) / (1600)) / 100) + 300px );
 		left: calc( (((-282) * ((100vw - 320px) * 100) / (1600)) / 100) + -45px );
 		width: calc( (((2174) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/rope.png") top center/100% 30% no-repeat;
 }
 body .wrapper .container .parralax__rope-2 .rope.active {
-		top: calc( (((-126) * ((100vw - 320px) * 100) / (1600)) / 100) + 40px );
+		transform: translateY(0);
 }
 body .wrapper .container .parralax__rope-2 .cloud-1 {
 		position: absolute;
@@ -420,32 +395,19 @@ body .wrapper .container .parralax__rope-2 .cloud-3 {
 body .wrapper .container .parralax__rope-3 {
 		width: 100%;
 		height: 100%;
-		animation-duration: 40s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-3-anim {
-		0% {
-				transform: translate(5%, 0);
-		}
-		50% {
-				transform: translate(-5%, 0);
-		}
-		100% {
-				transform: translate(5%, 0);
-		}
 }
 body .wrapper .container .parralax__rope-3 .rope {
-		top: -100%;
+		transform: translateY(-50%);
 		transition: all 1s ease 1.6s;
 		position: absolute;
+		top: calc( (((-162) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px );
 		height: calc( (((780) * ((100vw - 320px) * 100) / (1600)) / 100) + 300px );
 		left: calc( (((-282) * ((100vw - 320px) * 100) / (1600)) / 100) + -45px );
 		width: calc( (((2174) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/rope.png") top center/100% 30% no-repeat;
 }
 body .wrapper .container .parralax__rope-3 .rope.active {
-		top: calc( (((-162) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px );
+		transform: translateY(0);
 }
 body .wrapper .container .parralax__rope-3 .birds {
 		position: absolute;
@@ -552,14 +514,20 @@ body .wrapper .container .parralax__rope-3 .cloud-4 {
 				transform: rotateZ(-10deg);
 		}
 }
+body .wrapper .container .parralax .wave .img {
+		transition: all 1.5s ease 1s;
+		opacity: 0;
+}
+body .wrapper .container .parralax .wave .img.active {
+		opacity: 1;
+}
 body .wrapper .container .parralax__wave-1 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-1 .img {
-		bottom: -100%;
-		transition: all 1s ease 0.1s;
 		position: absolute;
+		bottom: calc( (((50) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
 		left: calc( (((-85) * ((100vw - 320px) * 100) / (1600)) / 100) + -203px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -585,17 +553,13 @@ body .wrapper .container .parralax__wave-1 .img .black {
 		left: -15%;
 		background-color: black;
 }
-body .wrapper .container .parralax__wave-1 .img.active {
-		bottom: calc( (((50) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
-}
 body .wrapper .container .parralax__wave-2 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-2 .img {
-		bottom: -100%;
-		transition: all 1.1s ease 0.2s;
 		position: absolute;
+		bottom: calc( (((38) * ((100vw - 320px) * 100) / (1600)) / 100) + 67px );
 		left: calc( (((-94) * ((100vw - 320px) * 100) / (1600)) / 100) + -194px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -621,17 +585,13 @@ body .wrapper .container .parralax__wave-2 .img .black {
 		left: -15%;
 		background-color: black;
 }
-body .wrapper .container .parralax__wave-2 .img.active {
-		bottom: calc( (((38) * ((100vw - 320px) * 100) / (1600)) / 100) + 67px );
-}
 body .wrapper .container .parralax__wave-3 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-3 .img {
-		bottom: -100%;
-		transition: all 1.2s ease 0.3s;
 		position: absolute;
+		bottom: calc( (((15) * ((100vw - 320px) * 100) / (1600)) / 100) + 50px );
 		left: calc( (((-105) * ((100vw - 320px) * 100) / (1600)) / 100) + -183px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -657,17 +617,13 @@ body .wrapper .container .parralax__wave-3 .img .black {
 		left: -15%;
 		background-color: black;
 }
-body .wrapper .container .parralax__wave-3 .img.active {
-		bottom: calc( (((15) * ((100vw - 320px) * 100) / (1600)) / 100) + 50px );
-}
 body .wrapper .container .parralax__wave-4 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-4 .img {
-		bottom: -100%;
-		transition: all 1.3s ease 0.4s;
 		position: absolute;
+		bottom: calc( (((-10) * ((100vw - 320px) * 100) / (1600)) / 100) + 33px );
 		left: calc( (((-119) * ((100vw - 320px) * 100) / (1600)) / 100) + -169px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -693,17 +649,13 @@ body .wrapper .container .parralax__wave-4 .img .black {
 		left: -15%;
 		background-color: black;
 }
-body .wrapper .container .parralax__wave-4 .img.active {
-		bottom: calc( (((-10) * ((100vw - 320px) * 100) / (1600)) / 100) + 33px );
-}
 body .wrapper .container .parralax__wave-5 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-5 .img {
-		bottom: -100%;
-		transition: all 1.4s ease 0.5s;
 		position: absolute;
+		bottom: calc( (((-42) * ((100vw - 320px) * 100) / (1600)) / 100) + 10px );
 		left: calc( (((-135) * ((100vw - 320px) * 100) / (1600)) / 100) + -153px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -729,17 +681,13 @@ body .wrapper .container .parralax__wave-5 .img .black {
 		left: -15%;
 		background-color: black;
 }
-body .wrapper .container .parralax__wave-5 .img.active {
-		bottom: calc( (((-42) * ((100vw - 320px) * 100) / (1600)) / 100) + 10px );
-}
 body .wrapper .container .parralax__wave-6 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-6 .img {
-		bottom: -100%;
-		transition: all 1.5s ease 0.6s;
 		position: absolute;
+		bottom: calc( (((-66) * ((100vw - 320px) * 100) / (1600)) / 100) + -10px );
 		left: calc( (((-148) * ((100vw - 320px) * 100) / (1600)) / 100) + -140px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
@@ -757,9 +705,6 @@ body .wrapper .container .parralax__wave-6 .img {
 				transform: rotateZ(360deg) translate3d(0, 2%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-6 .img.active {
-		bottom: calc( (((-66) * ((100vw - 320px) * 100) / (1600)) / 100) + -10px );
-}
 body .wrapper .container .parralax__liighthouse {
 		width: 100%;
 		height: 100%;
@@ -767,7 +712,7 @@ body .wrapper .container .parralax__liighthouse {
 body .wrapper .container .parralax__liighthouse .img {
 		position: absolute;
 		bottom: -100%;
-		transition: all 1s ease 2s;
+		transition: all 1s ease 2.5s;
 		left: calc( (((1280) * ((100vw - 320px) * 100) / (1600)) / 100) + 220px );
 		width: calc( (((190) * ((100vw - 320px) * 100) / (1600)) / 100) + 70px );
 		height: calc( (((370) * ((100vw - 320px) * 100) / (1600)) / 100) + 130px );
