--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -649,6 +649,8 @@ body {
                     width: 100%;
                     height: 100%;
                     .img {
+                        border: 1px solid red;
+
                         position: absolute;
                         @include adaptiveBottom(-76, -10);
                         @include adaptiveLeft(-288, -140);
@@ -656,16 +658,16 @@ body {
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-paint.png") center bottom / 25% 25% repeat-x;
 
-                        animation-name: wave-6-anim;
+                        // animation-name: wave-6-anim;
                         animation-duration: 3s;
                         animation-iteration-count: infinite;
                         animation-timing-function: linear;
                         @keyframes wave-6-anim {
                             0% {
-                                transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
+                                transform: rotateZ(0) translate3d(0, 1.5%, 0) rotateZ(0);
                             }
                             100% {
-                                transform: rotateZ(360deg) translate3d(0, 2%, 0) rotateZ(-360deg);
+                                transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
                             }
                         }
                     }
