--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -658,16 +658,16 @@ body {
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-paint.png") center bottom / 25% 25% repeat-x;
 
-                        // animation-name: wave-6-anim;
-                        animation-duration: 3s;
+                        animation-name: wave-6-anim;
+                        animation-duration: 4s;
                         animation-iteration-count: infinite;
                         animation-timing-function: linear;
                         @keyframes wave-6-anim {
                             0% {
-                                transform: rotateZ(0) translate3d(0, 1.5%, 0) rotateZ(0);
+                                transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
                             }
                             100% {
-                                transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
+                                transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
                             }
                         }
                     }
