--- a/css/style.css
+++ b/css/style.css
@@ -699,16 +699,17 @@ body .wrapper .container .parralax__wave-6 .img {
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/waves/wave-paint.png") center bottom/25% 25% repeat-x;
-		animation-duration: 3s;
+		animation-name: wave-6-anim;
+		animation-duration: 4s;
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;
 }
 @keyframes wave-6-anim {
 		0% {
-				transform: rotateZ(0) translate3d(0, 1.5%, 0) rotateZ(0);
+				transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
 		}
 		100% {
-				transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
+				transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
