--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,20 @@ h6 {
 }
 
 body {
+		width: 100vw;
+		height: 100vh;
+		overflow: hidden;
 		background-color: black;
 }
 body .wrapper {
+		width: 100vw;
+		height: 100vh;
 		opacity: 0;
 		transition: all 1s ease 0s;
+}
+body .wrapper .container {
+		width: 100vw;
+		height: 100vh;
 }
 body .wrapper .container .parralax {
 		position: relative;
@@ -692,24 +701,22 @@ body .wrapper .container .parralax__wave-6 {
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-6 .img {
-		border: 1px solid red;
 		position: absolute;
 		bottom: calc( (((-66) * ((100vw - 320px) * 100) / (1600)) / 100) + -10px );
 		left: calc( (((-148) * ((100vw - 320px) * 100) / (1600)) / 100) + -140px );
 		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/waves/wave-paint.png") center bottom/25% 25% repeat-x;
-		animation-name: wave-6-anim;
 		animation-duration: 4s;
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;
 }
 @keyframes wave-6-anim {
 		0% {
-				transform: rotateZ(0) translate3d(0, 1%, 0) rotateZ(0);
+				transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
 		}
 		100% {
-				transform: rotateZ(-360deg) translate3d(0, 1%, 0) rotateZ(360deg);
+				transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
